# QubitClient

./: .gitignore  README.md  client_demo.py  config.py.example  pyproject.toml  setup.py
.github/workflows/: release.yml
demo/: scope_demo.py
docs/: OPTPIPULSE.md  RABI.md  RABICOS.md  S21PEAK.md  S21VFLUX.md  SINGLESHOT.md  SPECTRUM2D.md  SPECTRUM2DSCOPE.md  T1FIT.md  T2FIT.md
qubitclient/: QubitSeg.py  __init__.py
qubitclient/draw/: README.md  optpipulsepltplotter.py  optpipulseplyplotter.py  pltmanager.py  pltplotter.py  plymanager.py  plyplotter.py  rabicospltplotter.py  rabicosplyplotter.py  rabipltplotter.py  rabiplyplotter.py  s21peakpltplotter.py  s21peakplyplotter.py  s21vfluxpltplotter.py  s21vfluxplyplotter.py  singleshotpltplotter.py  singleshotplyplotter.py  spectrum2dpltplotter.py  spectrum2dplyplotter.py  spectrum2dscopepltplotter.py  spectrum2dscopeplyplotter.py  t1fitpltplotter.py  t1fitplyplotter.py  t2fitpltplotter.py  t2fitplyplotter.py
qubitclient/nnscope/: QubitSeg.py  nnscope.py  task.py
qubitclient/nnscope/curve/: curve_type.py
qubitclient/nnscope/utils/: data_convert.py  data_parser.py  request_tool.py  result_parser.py
qubitclient/scope/: scope.py  task.py
qubitclient/utils/: data_convert.py  request_tool.py
script/: test.py
tests/: test_nnscope.py  test_scope.py  test_scope_api.py  test_scope_opt_pipulse.py  test_scope_rabi.py  test_scope_rabicos.py  test_scope_s21_peak.py  test_scope_s21vflux.py  test_scope_singleshot.py  test_scope_spectrum2dscope.py  test_scope_t1fit.py  test_scope_t2fit.py
(+3 files in other folders)
