[project]
name = "qubitclient"
version = "0.0.3.0"
description = "qubit analysis client"
authors = [
    { name = "Yaqiang Sun", email = "sunyaking@163.com" },
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "httpx>=0.28.1",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qubitclient*"]  # match qubitscope and qubitscope.*
exclude = ["tests", "tests.*", "tmp", "tmp.*"]
